Fix CSS styling on html, body and #app to properly postioning fottent on small content

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,16 @@ body {
   transition: color .15s ease;
 }
 
+html {
+  margin: 0;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+}
+
 a {
   color: var(--gray);
   text-decoration: none;
@@ -25,6 +35,8 @@ a {
 .container {
   width: 100%;
   margin: 0 auto !important;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .flex {
